<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.14">
  <GVL Name="GVL_Variables_Devices" Id="{ef0f0fb8-5ffa-4278-a23d-4ebcfe487349}">
    <Declaration><![CDATA[VAR_GLOBAL

    //change these to reflect xcs devices
    //VGC
vgcPBT_VGC_01 : ST_VGC;
vgcPBT_VGC_02 : ST_VGC;
vgcPBT_VGC_03 : ST_VGC;
vgcPBT_VGC_04 : ST_VGC;


//Vacuum Gauges

//GPI
vgPBT_GPI_02 : ST_VG; // real Pirani Gauge
vgPBT_GPI_04 : ST_VG;
vgPBT_GPI_06 : ST_VG;
vgPBT_GPI_07 : ST_VG;
vgPBT_GPI_09 : ST_VG;


//GCC
vgPBT_GCC_02 : ST_VG;
vgPBT_GCC_04 : ST_VG;
vgPBT_GCC_06 : ST_VG;
vgPBT_GCC_07 : ST_VG;
vgPBT_GCC_09 : ST_VG;
vgMON_DUMMY : ST_VG := (rPRESS := 1e-9, xAT_VAC := TRUE, xPRESS_OK :=True); //For downstream OK, comes from DG2


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>